--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="image/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Movie Tickets, Plays, Sports, Events & Cinemas near Kochi - BookMyShow</title>
 </head>
@@ -115,6 +116,22 @@
                         </ul>
                     </div>
                 </div>
+                <div class="navbar_logo_section">
+                    <ul>
+                        <li>
+                            <a href="#"> <img src="image/movies.png" alt="image"></a>
+                            <span>Movies</span>
+                        </li>
+                        <li>
+                            <a href="#"> <img src="image/flim.png" alt="image"></a>
+                            <span>Film</span>
+                        </li>
+                        <li>
+                            <a href="#"> <img src="image/music.png" alt="image"></a>
+                            <span>Music</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
@@ -190,7 +207,7 @@
                             <h3>Ponniyin Selvan - Part 2</h3>
                         </a>
                         <a href="#">
-                            <p>Action/Adventure/Drama/Historical</p>
+                            <p>Action/Adventure/Drama/<br>Historical</p>
                         </a>
                     </div>
                 </div>
@@ -201,7 +218,7 @@
                             <h3>Guardians of the Galaxy<br>Vol. 3</h3>
                         </a>
                         <a href="#">
-                            <p>Action/Adventure/Comedy/Sci-Fi</p>
+                            <p>Action/Adventure/Comedy/<br>Sci-Fi</p>
                         </a>
                     </div>
                 </div>
@@ -212,7 +229,7 @@
                             <h3>Fast X</h3>
                         </a>
                         <a href="#">
-                            <p>Action/Adventure/Crime/Thriller</p>
+                            <p>Action/Adventure/Crime/<br>Thriller</p>
                         </a>
                     </div>
                 </div>
@@ -849,15 +866,15 @@
             <div class="customercare_section">
                 <ul>
                     <li>
-                        <a href="#"><i class="fa-solid fa-headset"></i></a>
+                        <a href="#"> <img src="image/pngegg.png" alt=""> </a>
                         <a href="#">24/7 CUSTOMER CARE</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-sharp fa-solid fa-ticket"></i></a>
+                        <a href="#"><img src="image/pngegg (1).png" alt=""></a>
                         <a href="#">RESEND BOOKING CONFIRMATION</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-solid fa-envelope-open-text"></i></a>
+                        <a href="#"><img src="image/pngegg (2).png" alt="">a>
                         <a href="#">SUBSCRIBE TO THE NEWSLETTER</a>
                     </li>
                 </ul>
